[gd_scene load_steps=4 format=3 uid="uid://bx5l6q5outjxn"]

[ext_resource type="Texture2D" uid="uid://b1dllgjdww5sn" path="res://assets/images/Humble Gift - v1.3/PNG/SpriteSheet.png" id="1_j1q8d"]
[ext_resource type="Script" uid="uid://cj1ficr38vxnw" path="res://scenes/document_base.gd" id="1_xug0p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1q8d"]
size = Vector2(182, 280)

[node name="DocumentBase" type="Node2D"]
script = ExtResource("1_xug0p")
content = "Some Content for the reader"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_j1q8d")
region_enabled = true
region_rect = Rect2(32, 1120, 182, 280)

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(182, 280)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -140.0
offset_right = 91.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="DocumentBody" type="RichTextLabel" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Content"

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_j1q8d")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
